Added containers for admin/common sections of site, expreimented with formik, added some styles to signin page

--- a/client/src/pages/admin/SignIn/SignIn.scss
+++ b/client/src/pages/admin/SignIn/SignIn.scss
@@ -3,6 +3,8 @@
   padding: 1rem;
   background: #ccc;
   margin: 3rem auto;
+  border-radius: 5px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.8);
   animation: slide-in 1s;
 }
 
