--- a/client/src/components/admin/Button/Button.scss
+++ b/client/src/components/admin/Button/Button.scss
@@ -5,4 +5,6 @@
   border: none;
   padding: 0.5rem;
   cursor: pointer;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
 }
