Continued to flesh out signin form

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -12,3 +12,14 @@ body {
   width: 100%;
   min-height: 100%;
 }
+
+@keyframes slide-in {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
