--- a/client/src/components/admin/Error/Error.scss
+++ b/client/src/components/admin/Error/Error.scss
@@ -2,6 +2,7 @@ p.error {
   font-weight: bold;
   margin: 0.5rem;
   text-transform: uppercase;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   color: #e81f1f;
+  animation: slide-in 0.2s;
 }
