--- a/client/src/components/admin/Input/Input.scss
+++ b/client/src/components/admin/Input/Input.scss
@@ -1,10 +1,20 @@
-.input {
-  width: 100%;
-  border: none;
-  padding: 0.5rem;
-  outline: none;
+.admin-input {
+  .label {
+    color: #666;
+    font-size: 0.8rem;
+  }
+  .input {
+    width: 100%;
+    border: none;
+    padding: 0.5rem;
+    border: solid 1px #ddd;
+    border-radius: 3px;
+    outline: none;
+    font-family: 'Montserrat', Arial, Arial, Helvetica, sans-serif;
+    transition: border 0.2s ease-out;
 
-  &.error {
-    border-left: solid 4px #e81f1f;
+    &.error {
+      border-left: solid 4px #e81f1f;
+    }
   }
 }
