--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,40 @@
+@font-face {
+  font-family: 'DIN Next';
+  src: url('fonts/DINNextW-BoldItalic.woff2') format('woff2'),
+    url('fonts/DINNextW-BoldItalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'DIN Next';
+  src: url('fonts/DINNextW-Bold.woff2') format('woff2'),
+    url('fonts/DINNextW-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DIN Next';
+  src: url('fonts/DINNextW-Light.woff2') format('woff2'),
+    url('fonts/DINNextW-Light.woff') format('woff');
+  font-weight: light;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DIN Next';
+  src: url('fonts/DINNextW-LightItalic.woff2') format('woff2'),
+    url('fonts/DINNextW-LightItalic.woff') format('woff');
+  font-weight: light;
+  font-style: italic;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Din Next', Arial, Helvetica, sans-serif;
 }
 html,
 body {
